--- a/NumberClassifier/build.gradle
+++ b/NumberClassifier/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'application'
 }
 
 group 'org'
@@ -17,3 +18,5 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+
+mainClassName = 'NumberClassifier'
