--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -31,9 +31,9 @@ jobs:
     - name: Build
       uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
       with:
-        arguments: build --gradle-version 7.4
+        arguments: build
     - name: Test
       uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
       with:
-        arguments: test --gradle-version 7.4
+        arguments: test        
 
