--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -26,14 +26,12 @@ jobs:
     - name: Set up JDK
       uses: actions/setup-java@v3
       with:
-        java-version: '11'
+        java-version: '16'
         distribution: 'temurin'
     - name: Build
       uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
       with:
         arguments: build
     - name: Test
-      uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
-      with:
-        arguments: test        
+      run: ./gradlew build
 
