--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -34,6 +34,12 @@ jobs:
         arguments: build
         gradle-version: 7.4
         build-root-directory: NumberClassifier
+    - name: Check Style
+      uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
+      with:
+        arguments: check
+        gradle-version: 7.4
+        build-root-directory: NumberClassifier        
     - name: Test
       uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
       with:
