enable jacoco csv report

--- a/NumberClassifier/app/build.gradle
+++ b/NumberClassifier/app/build.gradle
@@ -40,7 +40,9 @@ apply plugin: 'jacoco'
 jacocoTestReport {
     reports {
         xml.enabled = true
+        csv.enabled = true
         html.enabled = true
+        
     }
 }
 
