commit the code coverage badge

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -51,3 +51,9 @@ jobs:
       with:
         generate-branches-badge: true
         jacoco-csv-file: NumberClassifier/app/build/reports/jacoco/test/jacocoTestReport.csv
+    - name: Commit JaCoCo Badge
+      uses: EndBug/add-and-commit@v7
+      with:
+        default_author: github_actions
+        message: 'commit badge'
+        add: '*.svg'        
