Use different action for committing badge

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -52,8 +52,9 @@ jobs:
         generate-branches-badge: true
         jacoco-csv-file: NumberClassifier/app/build/reports/jacoco/test/jacocoTestReport.csv
     - name: Commit JaCoCo Badge
-      uses: EndBug/add-and-commit@v9
+      uses: stefanzweifel/git-auto-commit-action@v4
       with:
-        default_author: github_actions
-        message: 'commit badge'
-        add: '*.svg'        
+        commit_message: Auto-generated code coverage badge.
+        file_pattern: '*.svg'
+
+
