--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -12,9 +12,8 @@ on:
     branches: [ "master" ]
   pull_request:
     branches: [ "master" ]
-
-permissions:
-  contents: read
+ 
+permissions: read-all|write-all
 
 jobs:
   build:
