fix permission syntax

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -13,7 +13,8 @@ on:
   pull_request:
     branches: [ "master" ]
  
-permissions: read-all|write-all
+permissions:
+  contents: read|write
 
 jobs:
   build:
