--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -59,6 +59,6 @@ jobs:
     - name: Upload JaCoCo coverage report
       uses: actions/upload-artifact@v2
       with:
-        name: jacoco-report
-        path: NumberClassifier/app/build/reports/tests/test
+        name: codecov-report
+        path: NumberClassifier/app/build/reports/jacoco/test/html
 
