--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -70,5 +70,5 @@ jobs:
     - name: Upload Javadoc
       uses: actions/upload-artifact@v2
       with:
-        name: codecov-report
+        name: javadoc
         path: NumberClassifier/app/build/docs/javadoc
