--- a/NumberClassifier/app/build.gradle
+++ b/NumberClassifier/app/build.gradle
@@ -42,7 +42,12 @@ jacocoTestReport {
         xml.enabled = true
         csv.enabled = true
         html.enabled = true
+    }
 
+    afterEvaluate {
+        classDirectories.setFrom(files(classDirectories.files.collect {
+            fileTree(dir: it, exclude: '**/gui/**')
+        }))
     }
 }
 
