--- a/NumberClassifier/app/build.gradle
+++ b/NumberClassifier/app/build.gradle
@@ -12,6 +12,10 @@ plugins {
     id 'checkstyle'
 }
 
+checkstyle {
+    toolVersion '10.3';
+}
+
 repositories {
     // Use Maven Central for resolving dependencies.
     mavenCentral()
