--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -72,13 +72,19 @@ jobs:
       with:
         name: javadoc
         path: NumberClassifier/app/build/docs/javadoc
+    - name: Build release
+      uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
+      with:
+        arguments: fatJar
+        gradle-version: 7.4
+        build-root-directory: NumberClassifier        
     - name: Make release
       run: |
         mkdir release
         mkdir release/data
         cp -f NumberClassifier/data/* release/data/
         cp -f NumberClassifier/*.json release/
-        cp NumberClassifier/app/build/libs/app.jar release/NumberClassifier.jar
+        cp NumberClassifier/app/build/libs/app-all-0.1.jar release/NumberClassifier.jar
     - name: Upload Jar
       uses: actions/upload-artifact@v2
       with:
