--- a/NumberClassifier/app/build.gradle
+++ b/NumberClassifier/app/build.gradle
@@ -10,6 +10,7 @@ plugins {
     // Apply the application plugin to add support for building a CLI application in Java.
     id 'application'
     id 'checkstyle'
+    id 'org.openjfx.javafxplugin' version '0.0.10'
 }
 
 version='0.1'
@@ -64,6 +65,11 @@ apply plugin: 'java'
 javadoc {
     source = sourceSets.main.allJava
     classpath = configurations.runtimeClasspath
+}
+
+javafx {
+    version = "18.0.2"
+    modules = [ 'javafx.controls', 'javafx.swing' ]
 }
 
 jar {
